--- a/cw1/quadtree/Makefile
+++ b/cw1/quadtree/Makefile
@@ -4,7 +4,7 @@
 EXE_DIR = .
 EXE = $(EXE_DIR)/quad
 
-SRC= quadtreeMain.c quadtreeFunctions.c QTLinkedListFunctions.c
+SRC= quadtreeMain.c quadtreeFunctions.c QTLinkedListFunctions.c valueTree.c
 
 # generic build details
 
@@ -34,5 +34,6 @@ clean:
 quadtreeMain.o:	quadtreeMain.c quadtree.h QTLinkedList.h
 quadtreeFunctions.o: quadtreeFunctions.c quadtree.h
 QTLinkedListFunctions.o: QTLinkedListFunctions.c quadtree.h QTLinkedList.h
+valueTree.o: valueTree.c quadtree.h QTLinkedList.h valueTree.h
 
 
