renaming files to fit in with camelCase std

--- a/cw1/quadtree/Makefile
+++ b/cw1/quadtree/Makefile
@@ -4,7 +4,7 @@
 EXE_DIR = .
 EXE = $(EXE_DIR)/quad
 
-SRC= quadtreeMain.c quadtreeFunctions.c QTLinkedListFunctions.c valueTree.c
+SRC= quadtreeMain.c quadtreeFunctions.c qtLinkedListFunctions.c valueTree.c
 
 # generic build details
 
@@ -31,9 +31,9 @@ clean:
 
 # dependencies
 
-quadtreeMain.o:	quadtreeMain.c quadtree.h QTLinkedList.h valueTree.h
+quadtreeMain.o:	quadtreeMain.c quadtree.h qtLinkedList.h valueTree.h
 quadtreeFunctions.o: quadtreeFunctions.c quadtree.h
-QTLinkedListFunctions.o: QTLinkedListFunctions.c quadtree.h QTLinkedList.h
-valueTree.o: valueTree.c quadtree.h QTLinkedList.h valueTree.h
+qtLinkedListFunctions.o: qtLinkedListFunctions.c quadtree.h qtLinkedList.h
+valueTree.o: valueTree.c quadtree.h qtLinkedList.h valueTree.h
 
 
