--- a/cw2/.cproject
+++ b/cw2/.cproject
@@ -34,6 +34,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.1156659487" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug">
 								<option id="gnu.c.link.option.libs.1795982872" name="Libraries (-l)" superClass="gnu.c.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="SDLmain"/>
+									<listOptionValue builtIn="false" value="SDL2"/>
 									<listOptionValue builtIn="false" value="SDL"/>
 									<listOptionValue builtIn="false" value="SDL_image"/>
 								</option>
