--- a/debug/Makefile
+++ b/debug/Makefile
@@ -2,15 +2,15 @@
 # code details
 
 EXE_DIR = .
-EXE = $(EXE_DIR)/sdl
+EXE = $(EXE_DIR)/rendering
 
-SRC= main.c events.c map.c render.c
+SRC= main.c init.c map.c quit.c lives.c logic.c events.c render.c gameWin.c gameOver.c collision.c
 
 # generic build details
 
 CC =     gcc
 CFLAGS = -Wall -O
-LIBS =   -lSDL2 -lSDL2_image
+LIBS =   -lm -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer
 
 # compile to  object code
 
@@ -31,8 +31,15 @@ clean:
 
 # dependencies
 
-main.o:  main.c structs.h events.h render.h map.h
-events.o:  events.c structs.h events.h render.h 
-map.o: map.c structs.h events.h render.h 
-render.o:  render.c structs.h events.h render.h map.h
+main.o: main.c defs.h
+init.o: init.c defs.h
+map.o: init.c defs.h
+quit.o: quit.c defs.h
+lives.o: lives.c defs.h
+logic.o: logic.c defs.h
+events.o: events.c defs.h
+render.o: render.c defs.h
+gameWin.o: gameWin.c defs.h
+gameOver.o: gameOver.c defs.h
+collision.o: collision.o defs.h
 
